# ChangeLog for mail-client/claws-mail-notification
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-notification/ChangeLog,v 1.9 2007/09/13 18:42:59 opfer Exp $

  13 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  claws-mail-notification-0.12.ebuild:
  x86 stable, security bug 190104

*claws-mail-notification-0.12 (03 Sep 2007)

  03 Sep 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-notification-0.12.ebuild:
  Version bump.

*claws-mail-notification-0.11 (07 Jul 2007)

  07 Jul 2007; <ticho@gentoo.org> +claws-mail-notification-0.11.ebuild:
  Version bump.

*claws-mail-notification-0.10 (16 Apr 2007)

  16 Apr 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-notification-0.10.ebuild:
  Version bump.

*claws-mail-notification-0.9 (27 Feb 2007)

  27 Feb 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-notification-0.9.ebuild:
  Version bump.

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  claws-mail-notification-0.7.ebuild:
  stable x86; bug #163611

*claws-mail-notification-0.8 (09 Jan 2007)

  09 Jan 2007; Andrej Kacian <ticho@gentoo.org>
  +claws-mail-notification-0.8.ebuild:
  Version bump.

  04 Jan 2007; Steve Dibb <beandog@gentoo.org>
  claws-mail-notification-0.7.ebuild:
  add ~amd64, bug 153151

*claws-mail-notification-0.7 (19 Dec 2006)

  19 Dec 2006; Andrej Kacian <ticho@gentoo.org> +metadata.xml,
  +claws-mail-notification-0.7.ebuild:
  This is the new name of mail-client/sylpheed-claws-notification.
