@@ -1,0 +1,3 @@
+MD5 8b6bc3b4661b994a26fc6456b4c01ea5 notification_plugin-0.12.1.tar.gz 460042
+RMD160 951afe5556cbaaa970381012339406a2a797fea8 notification_plugin-0.12.1.tar.gz 460042
+SHA256 6494b36d57102b96c2e7fbc2ccfa07a36de8bca623ef1bba9b5f4088e841ecab notification_plugin-0.12.1.tar.gz 460042
