@@ -1,0 +1,3 @@
+MD5 d089da41f155c669efe9a3dedd16e39e vcalendar-1.98.tar.gz 764473
+RMD160 28fd1ad3c3cbf198d606ce155ab603ffba82669d vcalendar-1.98.tar.gz 764473
+SHA256 ce4e4ca82d00f9b1ebdba4dcc9b09abf6c9ef70be33a5a62cfecaff920d93049 vcalendar-1.98.tar.gz 764473
