@@ -1,0 +1,3 @@
+MD5 700c6b4efeb10cc33a43111c2a734db8 claws-mail-3.0.1.tar.bz2 5654189
+RMD160 431ab3ca051382db1e307ef1abafc5ce659f4aa3 claws-mail-3.0.1.tar.bz2 5654189
+SHA256 58259afd6f239829aeaf15a370978e10d8b98a08ad5eb4eb6b70fb7696efec30 claws-mail-3.0.1.tar.bz2 5654189
