@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/claws-mail-vcalendar
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-vcalendar/ChangeLog,v 1.23 2007/09/16 16:32:11 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-vcalendar/ChangeLog,v 1.24 2007/09/18 09:17:05 ticho Exp $
+
+*claws-mail-vcalendar-1.98 (18 Sep 2007)
+
+  18 Sep 2007; Andrej Kacian <ticho@gentoo.org>
+  +claws-mail-vcalendar-1.98.ebuild:
+  Version bump.
 
   16 Sep 2007; Christoph Mende <angelos@gentoo.org>
   claws-mail-vcalendar-1.96.ebuild:
