@@ -1,6 +1,11 @@
 # ChangeLog for mail-client/claws-mail
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail/ChangeLog,v 1.46 2007/09/16 20:11:56 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail/ChangeLog,v 1.47 2007/09/18 09:08:55 ticho Exp $
+
+*claws-mail-3.0.1 (18 Sep 2007)
+
+  18 Sep 2007; Andrej Kacian <ticho@gentoo.org> +claws-mail-3.0.1.ebuild:
+  Version bump.
 
 *claws-mail-3.0.0-r1 (16 Sep 2007)
 
