@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/claws-mail-notification
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-notification/ChangeLog,v 1.9 2007/09/13 18:42:59 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/claws-mail-notification/ChangeLog,v 1.10 2007/09/18 09:12:47 ticho Exp $
+
+*claws-mail-notification-0.12.1 (18 Sep 2007)
+
+  18 Sep 2007; Andrej Kacian <ticho@gentoo.org>
+  +claws-mail-notification-0.12.1.ebuild:
+  Version bump.
 
   13 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
   claws-mail-notification-0.12.ebuild:
